--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Mónica Trujillo. !Encuentra nuevos caminos! Pide informes, cotizaciones y pruebas de manejo.">
+    <meta name="keywords" content="Mónica Trujillo, Monica Trujillo, Monica, Trujillo, Comprar coche, Chevrolet, Comprar Chevrolet, Comprar coches, Prueba de manejo, Cotización, Cotizaciones coches, Venta de coches, Venta de Chevrolet, Venta autos nuevos, Venta seminuevos, Encuentra nuevos caminos, Find new roads, Informes compra de autos, Informe venta de autos, Informes Chevrolet, Chevrolet Insurgentes, Compra de autos nuevos, Compra de autos nuevos Chevrolet, Spark, Camaro Coupé, Chevrolet Cruze NG, Chevrolet Equinox, Chevrolet Express Van, Chevrolet Trax, Chevrolet Volt, Colorado, Malibu, Nuevo Aveo, S10, Silverado 1500, Silverado 2500, Sonic, Sonic Hatchback, Spark Classic, Suburban, Tahoe, Tornado, Traverse">
+    <meta name="author" content="Pamela Flores">
+    <meta property="og:title" content="Mónica Trujillo">
+    <meta property="og:description" content="Mónica Trujillo. !Encuentra nuevos caminos! Pide informes, cotizaciones y pruebas de manejo.">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Mónica Trujillo | Chevrolet Insurgentes</title>
 
