--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <div class="row up">
         <div class="col-xs-12 col-md-5 col-lg-4">
           <div class="slogan">
+            <p class="text-center"><img class="img-fluid" src="img/ChSA-logo.png"></p>
             <h1 class="text-center">Mónica Trujillo</h1>
             <h3 class="text-center"><strong>¡Encuentra nuevos caminos!</strong><br/> Pregunta por las promociones y planes de financiamiento que tenemos para ti. </h3>
             <p class="text-center"><a class="boton" href="tel:5554311664">Más Información</a></p>
@@ -38,7 +39,10 @@
         </div>
 
         <div class="col-xs-12 col-md-7 col-lg-8">
-          <div class="row main-img"></div>
+          <div class="row main-img">
+            <p class="text-center"><img class="img-fluid txt-coches" src="img/txt-arriba.png"></p>
+            <p class="text-center"><img class="img-fluid img-coches" src="img/coches.png"></p>
+          </div>
         </div>
       </div>
 
