Updates contact phone number

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <p class="text-center"><img class="img-fluid" src="img/ChSA-logo.png"></p>
             <h1 class="text-center">Mónica Trujillo</h1>
             <h3 class="text-center"><strong>¡Encuentra nuevos caminos!</strong><br/> Pregunta por las promociones y planes de financiamiento que tenemos para ti. </h3>
-            <p class="text-center"><a class="boton" href="tel:+5215554311664">Más Información</a></p>
+            <p class="text-center"><a class="boton" href="tel:5554311664">Más Información</a></p>
           </div>
         </div>
 
@@ -52,7 +52,7 @@
           <div class="row contacto">
             <h2 class="text-center">CONTACTO</h2>
             <p class="text-center">
-              <a class="boton llamar" target="_blank" href="tel:+5215554311664">
+              <a class="boton llamar" target="_blank" href="tel:5554311664">
                 <img src="img/phone.svg">
                 55 5431 1664
               </a>
