--- a/index.html
+++ b/index.html
@@ -1,22 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Mónica Trujillo. !Encuentra nuevos caminos! Pide informes, cotizaciones y pruebas de manejo.">
-    <meta name="keywords" content="Mónica Trujillo, Monica Trujillo, Monica, Trujillo, Comprar coche, Chevrolet, Cheverolet San Antonio, Chevrolet Insurgentes, Chevrolet México, Comprar Chevrolet, Comprar coches, Prueba de manejo, Cotización, Cotizaciones coches, Venta de coches, Venta de Chevrolet, Venta autos nuevos, Venta seminuevos, Encuentra nuevos caminos, Find new roads, Informes compra de autos, Informe venta de autos, Informes Chevrolet, Compra de autos nuevos, Compra de autos nuevos Chevrolet, Onix, Aveo, Beat, Tracker, Spark, Camaro Coupé, Chevrolet Cruze NG, Chevrolet Equinox, Chevrolet Express Van, Chevrolet Trax, Chevrolet Bolt, Colorado, Malibu, Nuevo Aveo, S10, Silverado 1500, Silverado 2500, Sonic, Sonic Hatchback, Spark Classic, Suburban, Tahoe, Tornado, Traverse">
-    <meta name="author" content="Pamela Flores">
-    <meta property="og:title" content="Mónica Trujillo">
-    <meta property="og:description" content="Mónica Trujillo. !Encuentra nuevos caminos! Pide informes, cotizaciones y pruebas de manejo.">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="Mónica Trujillo. !Encuentra nuevos caminos! Pide informes, cotizaciones y pruebas de manejo."
+    />
+    <meta
+      name="keywords"
+      content="Mónica Trujillo, Monica Trujillo, Monica, Trujillo, Comprar coche, Chevrolet, Cheverolet San Antonio, Chevrolet Insurgentes, Chevrolet México, Comprar Chevrolet, Comprar coches, Prueba de manejo, Cotización, Cotizaciones coches, Venta de coches, Venta de Chevrolet, Venta autos nuevos, Venta seminuevos, Encuentra nuevos caminos, Find new roads, Informes compra de autos, Informe venta de autos, Informes Chevrolet, Compra de autos nuevos, Compra de autos nuevos Chevrolet, Onix, Aveo, Beat, Tracker, Spark, Camaro Coupé, Chevrolet Cruze NG, Chevrolet Equinox, Chevrolet Express Van, Chevrolet Trax, Chevrolet Bolt, Colorado, Malibu, Nuevo Aveo, S10, Silverado 1500, Silverado 2500, Sonic, Sonic Hatchback, Spark Classic, Suburban, Tahoe, Tornado, Traverse"
+    />
+    <meta name="author" content="Pamela Flores" />
+    <meta property="og:title" content="Mónica Trujillo" />
+    <meta
+      property="og:description"
+      content="Mónica Trujillo. !Encuentra nuevos caminos! Pide informes, cotizaciones y pruebas de manejo."
+    />
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Mónica Trujillo | Chevrolet San Antonio</title>
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet">
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-    <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@400;500&display=swap" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/styles.css" rel="stylesheet" />
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -24,51 +36,87 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <!-- Google Tag Manager -->
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-WQ4NLJF");
+    </script>
+    <!-- End Google Tag Manager -->
   </head>
   <body>
     <div class="container-fluid">
-
       <div class="row up">
         <div class="col-xs-12 col-md-5 col-lg-4">
           <div class="slogan">
-            <p class="text-center"><img class="img-fluid" src="img/ChSA-logo.png"></p>
+            <p class="text-center">
+              <img class="img-fluid" src="img/ChSA-logo.png" />
+            </p>
             <h1 class="text-center">Mónica Trujillo</h1>
-            <h3 class="text-center"><strong>¡Encuentra nuevos caminos!</strong><br/> Pregunta por las promociones y planes de financiamiento que tenemos para ti. </h3>
-            <p class="text-center"><a class="boton" href="tel:5554311664">Más Información</a></p>
+            <h3 class="text-center">
+              <strong>¡Encuentra nuevos caminos!</strong><br />
+              Pregunta por las promociones y planes de financiamiento que
+              tenemos para ti.
+            </h3>
+            <p class="text-center">
+              <a class="boton" href="tel:5554311664">Más Información</a>
+            </p>
           </div>
         </div>
 
         <div class="col-xs-12 col-md-7 col-lg-8">
           <div class="row main-img">
-            <p class="text-center"><img class="img-fluid txt-coches" src="img/txt-arriba.png"></p>
-            <p class="text-center"><img class="img-fluid img-coches" src="img/coches.png"></p>
+            <p class="text-center">
+              <img class="img-fluid txt-coches" src="img/txt-arriba.png" />
+            </p>
+            <p class="text-center">
+              <img class="img-fluid img-coches" src="img/coches.png" />
+            </p>
           </div>
         </div>
       </div>
 
       <div class="row">
-
         <div class="col-xs-12 col-lg-4">
           <div class="row contacto">
             <h2 class="text-center">CONTACTO</h2>
             <p class="text-center">
               <a class="boton llamar" target="_blank" href="tel:5554311664">
-                <img src="img/phone.svg">
+                <img src="img/phone.svg" />
                 55 5431 1664
               </a>
-              <a class="boton mail" target="_blank" href="mailto:hola@monica-trujillo.com">
-                <img src="img/mail.svg">
+              <a
+                class="boton mail"
+                target="_blank"
+                href="mailto:hola@monica-trujillo.com"
+              >
+                <img src="img/mail.svg" />
                 Escribir
               </a>
             </p>
 
             <p class="text-center">
-              <a class="boton whatsapp" target="_blank"  href="https://api.whatsapp.com/send?phone=5215554311664"> 
-                <img src="img/whatsapp.svg">
+              <a
+                class="boton whatsapp"
+                target="_blank"
+                href="https://api.whatsapp.com/send?phone=5215554311664"
+              >
+                <img src="img/whatsapp.svg" />
                 WhatsApp
               </a>
-              <a class="boton facebook" target="_blank"  href="https://www.facebook.com/AsesoraDeChevroletSanAntonio">
-                <img src="img/facebook.svg">
+              <a
+                class="boton facebook"
+                target="_blank"
+                href="https://www.facebook.com/AsesoraDeChevroletSanAntonio"
+              >
+                <img src="img/facebook.svg" />
                 Sígueme
               </a>
             </p>
@@ -78,25 +126,42 @@
         <div class="col-xs-12 col-md-6 col-lg-4">
           <div class="row map">
             <h2 class="text-center">CHEVROLET SAN ANTONIO</h2>
-            <p class="text-center">Av. Colonia del Valle No. 131<br/>
-            Insurgentes San Borja, Benito Juárez, 03100, CDMX</p>
-            <p class="text-center"><a class="boton" href="https://g.page/AUTOSSEMINUEVOS?share" target="_blank">UBICACIÓN</a></p>
+            <p class="text-center">
+              Av. Colonia del Valle No. 131<br />
+              Insurgentes San Borja, Benito Juárez, 03100, CDMX
+            </p>
+            <p class="text-center">
+              <a
+                class="boton"
+                href="https://g.page/AUTOSSEMINUEVOS?share"
+                target="_blank"
+                >UBICACIÓN</a
+              >
+            </p>
           </div>
         </div>
 
         <div class="col-xs-12 col-md-6 col-lg-4">
           <div class="row logo">
-            <h1 class="text-center"><img src="img/logo.png"></h1>
+            <h1 class="text-center"><img src="img/logo.png" /></h1>
           </div>
         </div>
-
       </div>
-
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-WQ4NLJF"
+        height="0"
+        width="0"
+        style="display: none; visibility: hidden"
+      ></iframe
+    ></noscript>
+    <!-- End Google Tag Manager (noscript) -->
   </body>
 </html>
